# gbdk-snake

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  index.template.html
.github/workflows/: build-and-deploy.yml
src/: main.c  palettes.c  palettes.h  save.c  save.h  snake.c  snake.h  title.c  title.h
